--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -33,6 +33,7 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+	background-color: #000;
 }
 
 .card__container--closed .card__image {
@@ -83,17 +84,45 @@
 	line-height: 1;
 	margin: 5px 0 0 0;
 	color: #3b393d;
+	-webkit-text-stroke: 0px black;
+	text-shadow:
+		0px 0px 0 #000,
+		0px 0px 0 #000,  
+		0px 0px 0 #000,
+		0px 0px 0 #000,
+		0px 0px 0 #000;
 }
 
 .card__container--closed .card__title {
 	color: #fff;
+	-webkit-text-stroke: 0.02em black;
+	text-shadow:
+		0.06em 0.06em 0 #000,
+		-0.02em -0.02em 0 #000,  
+		0.02em -0.02em 0 #000,
+		-0.02em 0.02em 0 #000,
+		0.02em 0.02em 0 #000;
 }
 
 .card__subtitle {
-	font-size: .95em;
+	font-size: .75em;
 	line-height: 1;
 	margin: 5px 0 0;
 	color: #777778;
+}
+
+.card__container--closed .card__subtitle {
+	font-size: 1.2em;
+	line-height: 1;
+	margin: 5px 0 0;
+	color: #777778;
+	-webkit-text-stroke: 0.02em black;
+	text-shadow:
+		0.06em 0.06em 0 #000,
+		-0.02em -0.02em 0 #000,  
+		0.02em -0.02em 0 #000,
+		-0.02em 0.02em 0 #000,
+		0.02em 0.02em 0 #000;
 }
 
 .card__container--closed .card__subtitle {
@@ -108,22 +137,36 @@
 	color: #3b393d;
 }
 
-.card__copy p:first-of-type {
+/*.card__copy p:first-of-type {
 	font-size: 1.5em;
 	padding: 0 0 1em 0;
-}
+}*/
 
 .card__btn-close {
 	font-size: 18px;
-	position: absolute;
-	top: 0;
-	right: 0;
-	padding: 36px;
+	position: -webkit-sticky; /* Safari */  
+	position: sticky;
+	float: right;
+	top: 8px;
+	margin-right: -20px;
 	cursor: pointer;
+	color: #660000;
 }
 
-.card__container--closed .card__btn-close {
+.card__container--closed .card__btn-close-container {
 	display: none;
+}
+
+.card__copy img
+{
+	width: 45%;
+	padding: 1% 1%;
+}
+
+.card__copy video
+{
+	width: 100%;
+	padding: 1% 0%;
 }
 
 .meta {
@@ -235,7 +278,7 @@ a {
 
 a:hover,
 a:focus {
-	color: #3b393d;
+	color: #7b0018;
 }
 
 .body {
@@ -243,7 +286,12 @@ a:focus {
 }
 
 .body a {
-	color: #4f4c4c;
+	color: #de6551;
+}
+
+.body a:hover, 
+.body a:focus {
+	color: #7b0018;
 }
 
 .body .header h1 span {
