--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -7,7 +7,11 @@
 	width: 29%;
 	height: 0;
 	margin: 2%;
-	padding-bottom: 20%;
+	padding-bottom: 16%;
+	display: block;
+    min-width: auto;
+	background-color: transparent;
+    border: 1px solid rgba(0,0,0,0);
 }
 
 .card__container {
@@ -33,7 +37,6 @@
 	display: block;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
 }
 
 .card__container--closed .card__image {
@@ -48,8 +51,8 @@
 
 .card__content {
 	position: relative;
-	width: 100%;
-	max-width: 800px;
+	width: 75%;
+	/*max-width: 800px;*/
 	height: auto;
 	margin: 400px auto 60px;
 	padding: 30px 40px 22px;
@@ -61,19 +64,20 @@
 	padding: 0 16px;
 	pointer-events: none;
 	background: transparent;
+	width: 100%;
 }
 
 .card__caption {
 	font-size: 2em;
-	max-width: 800px;
+	width: 90%;
 	margin: 0 auto;
-	padding: 35px 30px 0px;
+	padding: 0.035em 0.03em 0em;
 }
 
 .card__container--closed .card__caption {
 	font-size: 1em;
-	max-width: auto;
-	padding: 10px 10px 25px;
+	max-width: 100%;
+	padding: 0.01em 0.01em 0.3em;
 	-webkit-transform: translateY(-100%);
 	-ms-transform: translateY(-100%);
 	transform: translateY(-100%);
@@ -135,7 +139,7 @@
 
 .card__copy {
 	font-size: 1.25em;
-	max-width: 900px;
+	width: 95%;
 	margin: 0 auto;
 	padding: 25px 30px 100px;
 	color: #3b393d;
@@ -147,14 +151,14 @@
 }*/
 
 .card__btn-close {
-	font-size: 18px;
+	font-size: 2.5em;
 	position: -webkit-sticky; /* Safari */  
 	position: sticky;
 	float: right;
 	top: 8px;
-	margin-right: -20px;
+	margin-right: -0.25em;
 	cursor: pointer;
-	color: #660000;
+	/*color: #660000;*/  
 }
 
 .card__container--closed .card__btn-close-container {
@@ -269,9 +273,8 @@ body.body--hidden .header {
 	opacity: 0;
 }
 
-.header{
-	-webkit-transition: opacity 300ms ease-in-out;
-	transition: opacity 300ms ease-in-out;
+.content{
+	padding: 0em 3em 3em 3em;
 }
 
 a {
@@ -283,6 +286,11 @@ a {
 a:hover,
 a:focus {
 	color: #7b0018;
+}
+
+a:hover,
+a:focus {
+	color: #3b393d;
 }
 
 .body {
@@ -312,6 +320,8 @@ a:focus {
 /* Header */
 
 .header {
+	-webkit-transition: opacity 300ms ease-in-out;
+	transition: opacity 300ms ease-in-out;
 	padding: 2em 1em;
 	text-align: center;
 }
@@ -329,6 +339,10 @@ a:focus {
 	padding: .5em 0 1em;
 	color: #999;
 }
+
+.header a {
+	color: #3b393d;
+}
 /* Top Navigation Style */
 
 .links {
@@ -345,7 +359,6 @@ a:focus {
 .wrapper {
 	overflow: auto;
 	width: 95%;
-	max-width: 1366px;
 	margin: 0 auto;
 }
 
@@ -407,4 +420,18 @@ a:focus {
 .ff .polygon {
 	-webkit-transform: scale(1)!important;
 	transform: scale(1)!important;
+}
+
+.modal img{
+	width: 70em;
+}
+
+.modal-dialog.qualquer
+{
+	width: 70em;
+	max-width: none;
+}
+
+.modal-backdrop.show {
+    opacity: 0.8;
 }
