--- a/css/native.css
+++ b/css/native.css
@@ -1,4 +1,4 @@
-.highlight pre { background-color: #404040 }
+.highlight pre { background-color: #404040; font-size: 0.75em; }
 .highlight .hll { background-color: #404040 }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -68,4 +68,3 @@
 .highlight .vg { color: #40ffff } /* Name.Variable.Global */
 .highlight .vi { color: #40ffff } /* Name.Variable.Instance */
 .highlight .il { color: #3677a9 } /* Literal.Number.Integer.Long */
-.highlight { font-size: 0.75em }
